v0.0.1/modules/schema/pages/class/SchedulingCoordinator.adoc
= `SchedulingCoordinator`
:toclevels: 4


+++Market participants could be represented by Scheduling Coordinators (SCs) that are registered with the RTO/ISO. One participant could register multiple SCs with the RTO/ISO. Many market participants can do business with the RTO/ISO using a single SC. One SC could schedule multiple generators. A load scheduling point could be used by multiple SCs. Each SC could schedule load at multiple scheduling points. An inter-tie scheduling point can be used by multiple SCs. Each SC can schedule interchange at multiple inter-tie scheduling points.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:SchedulingCoordinator`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Organisation.adoc[`Organisation`]
*** xref::class/MarketParticipant.adoc[`MarketParticipant`]
**** *`SchedulingCoordinator`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
SchedulingCoordinator {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



Trade {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



Trade {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



Trade {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ContractRight {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



Trade {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MarketParticipant {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



LoadRatio {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



SchedulingCoordinatorUser {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MarketDocument {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MarketPerson {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



TimeSeries {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



Bid {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MarketRole {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



RegisteredResource {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



SchedulingCoordinator {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ElectronicAddress {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



TelephoneNumber {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



TelephoneNumber {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



StreetAddress {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



StreetAddress {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ParentOrganization {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



OrganisationRole {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



SwitchingPlanRequest {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




SchedulingCoordinator -> Trade: FromSCTrade


SchedulingCoordinator -> Trade: ToSCTrade


SchedulingCoordinator -> Trade: SubmitFromSCTrade


SchedulingCoordinator -> ContractRight: TransmissionContractRight


SchedulingCoordinator -> Trade: SubmitToSCTrade


SchedulingCoordinator -> MarketParticipant: MarketParticipant


SchedulingCoordinator -> LoadRatio: LoadRatio


SchedulingCoordinator -> SchedulingCoordinatorUser: SchedulingCoordinatorUser


SchedulingCoordinator -> MarketDocument: MarketDocument


SchedulingCoordinator -> MarketPerson: MarketPerson


SchedulingCoordinator -> TimeSeries: TimeSeries


SchedulingCoordinator -> Bid: Bid


SchedulingCoordinator -> MarketRole: MarketRole


SchedulingCoordinator -> RegisteredResource: RegisteredResource


SchedulingCoordinator -> SchedulingCoordinator: SchedulingCoordinator


SchedulingCoordinator -> ElectronicAddress: electronicAddress


SchedulingCoordinator -> TelephoneNumber: phone1


SchedulingCoordinator -> TelephoneNumber: phone2


SchedulingCoordinator -> StreetAddress: postalAddress


SchedulingCoordinator -> StreetAddress: streetAddress


SchedulingCoordinator -> ParentOrganization: ParentOrganisation


SchedulingCoordinator -> OrganisationRole: Roles


SchedulingCoordinator -> SwitchingPlanRequest: SwitchingPlanRequest


SchedulingCoordinator -> DiagramObject: DiagramObjects


SchedulingCoordinator -> InstanceSet: InstanceSet


SchedulingCoordinator -> Name: Names


SchedulingCoordinator -> ChangeSetMember: PropertiesCIMDataObject


SchedulingCoordinator -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<LoadRatio,`LoadRatio`>>
| 1
| xref::class/LoadRatio.adoc[`LoadRatio`]
| n/a

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<MarketParticipant,`MarketParticipant`>>
| 0..1
| xref::class/MarketParticipant.adoc[`MarketParticipant`]
| n/a

| <<creditFlag,`creditFlag`>>
| 0..1
| xref::enumeration/YesNo.adoc[`YesNo`]
| +++Flag to indicate creditworthiness (Y, N)+++

| <<creditStartEffectiveDate,`creditStartEffectiveDate`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date that the scheduling coordinator becomes creditworthy.+++

| <<lastModified,`lastModified`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Indication of the last time this scheduling coordinator information was modified.+++

| <<qualificationStatus,`qualificationStatus`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Scheduling coordinator qualification status, Qualified, Not Qualified, or Disqualified.+++

| <<scid,`scid`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++This is the short name or Scheduling Coordinator ID field.+++

| <<FromSCTrade,`FromSCTrade`>>
| 0..*
| xref::class/Trade.adoc[`Trade`]
| n/a

| <<SchedulingCoordinatorUser,`SchedulingCoordinatorUser`>>
| 0..*
| xref::class/SchedulingCoordinatorUser.adoc[`SchedulingCoordinatorUser`]
| n/a

| <<SubmitFromSCTrade,`SubmitFromSCTrade`>>
| 0..*
| xref::class/Trade.adoc[`Trade`]
| n/a

| <<SubmitToSCTrade,`SubmitToSCTrade`>>
| 0..*
| xref::class/Trade.adoc[`Trade`]
| n/a

| <<ToSCTrade,`ToSCTrade`>>
| 0..*
| xref::class/Trade.adoc[`Trade`]
| n/a

| <<TransmissionContractRight,`TransmissionContractRight`>>
| 0..*
| xref::class/ContractRight.adoc[`ContractRight`]
| n/a

| <<ParentOrganisation,`ParentOrganisation`>>
| 0..1
| xref::class/ParentOrganization.adoc[`ParentOrganization`]
| +++Parent organisation of this organisation.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<electronicAddress,`electronicAddress`>>
| 0..1
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]
| +++Electronic address.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<phone1,`phone1`>>
| 0..1
| xref::class/TelephoneNumber.adoc[`TelephoneNumber`]
| +++Phone number.+++

| <<phone2,`phone2`>>
| 0..1
| xref::class/TelephoneNumber.adoc[`TelephoneNumber`]
| +++Additional phone number.+++

| <<postalAddress,`postalAddress`>>
| 0..1
| xref::class/StreetAddress.adoc[`StreetAddress`]
| +++Postal address, potentially different than 'streetAddress' (e.g., another city).+++

| <<streetAddress,`streetAddress`>>
| 0..1
| xref::class/StreetAddress.adoc[`StreetAddress`]
| +++Street address.+++

| <<Bid,`Bid`>>
| 0..*
| xref::class/Bid.adoc[`Bid`]
| n/a

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<MarketDocument,`MarketDocument`>>
| 0..*
| xref::class/MarketDocument.adoc[`MarketDocument`]
| n/a

| <<MarketPerson,`MarketPerson`>>
| 0..*
| xref::class/MarketPerson.adoc[`MarketPerson`]
| n/a

| <<MarketRole,`MarketRole`>>
| 0..*
| xref::class/MarketRole.adoc[`MarketRole`]
| n/a

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<RegisteredResource,`RegisteredResource`>>
| 0..*
| xref::class/RegisteredResource.adoc[`RegisteredResource`]
| n/a

| <<Roles,`Roles`>>
| 0..*
| xref::class/OrganisationRole.adoc[`OrganisationRole`]
| +++All roles of this organisation.+++

| <<SchedulingCoordinator,`SchedulingCoordinator`>>
| 0..*
| xref::class/SchedulingCoordinator.adoc[`SchedulingCoordinator`]
| n/a

| <<SwitchingPlanRequest,`SwitchingPlanRequest`>>
| 0..*
| xref::class/SwitchingPlanRequest.adoc[`SwitchingPlanRequest`]
| +++The switching plan requested by the requesting organization+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++

| <<TimeSeries,`TimeSeries`>>
| 0..*
| xref::class/TimeSeries.adoc[`TimeSeries`]
| n/a
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Bid]
=== `Bid`


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketParticipant.Bid`
| Cardinality
| 0..*
| Type
| xref::class/Bid.adoc[`Bid`]

| Inherited from
| xref::class/MarketParticipant.adoc[`MarketParticipant`]


|===

//[discrete]
[#creditFlag]
=== `creditFlag`
+++Flag to indicate creditworthiness (Y, N)+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SchedulingCoordinator.creditFlag`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

//[discrete]
[#creditStartEffectiveDate]
=== `creditStartEffectiveDate`
+++Date that the scheduling coordinator becomes creditworthy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SchedulingCoordinator.creditStartEffectiveDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#electronicAddress]
=== `electronicAddress`
+++Electronic address.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.electronicAddress`
| Cardinality
| 0..1
| Type
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]

| Inherited from
| xref::class/Organisation.adoc[`Organisation`]


|===

//[discrete]
[#FromSCTrade]
=== `FromSCTrade`


[cols="h,4",width=65%]
|===
| URI
| `cim:SchedulingCoordinator.FromSCTrade`
| Cardinality
| 0..*
| Type
| xref::class/Trade.adoc[`Trade`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#lastModified]
=== `lastModified`
+++Indication of the last time this scheduling coordinator information was modified.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SchedulingCoordinator.lastModified`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#LoadRatio]
=== `LoadRatio`


[cols="h,4",width=65%]
|===
| URI
| `cim:SchedulingCoordinator.LoadRatio`
| Cardinality
| 1
| Type
| xref::class/LoadRatio.adoc[`LoadRatio`]


|===

//[discrete]
[#MarketDocument]
=== `MarketDocument`


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketParticipant.MarketDocument`
| Cardinality
| 0..*
| Type
| xref::class/MarketDocument.adoc[`MarketDocument`]

| Inherited from
| xref::class/MarketParticipant.adoc[`MarketParticipant`]


|===

//[discrete]
[#MarketParticipant]
=== `MarketParticipant`


[cols="h,4",width=65%]
|===
| URI
| `cim:SchedulingCoordinator.MarketParticipant`
| Cardinality
| 0..1
| Type
| xref::class/MarketParticipant.adoc[`MarketParticipant`]


|===

//[discrete]
[#MarketPerson]
=== `MarketPerson`


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketParticipant.MarketPerson`
| Cardinality
| 0..*
| Type
| xref::class/MarketPerson.adoc[`MarketPerson`]

| Inherited from
| xref::class/MarketParticipant.adoc[`MarketParticipant`]


|===

//[discrete]
[#MarketRole]
=== `MarketRole`


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketParticipant.MarketRole`
| Cardinality
| 0..*
| Type
| xref::class/MarketRole.adoc[`MarketRole`]

| Inherited from
| xref::class/MarketParticipant.adoc[`MarketParticipant`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ParentOrganisation]
=== `ParentOrganisation`
+++Parent organisation of this organisation.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.ParentOrganisation`
| Cardinality
| 0..1
| Type
| xref::class/ParentOrganization.adoc[`ParentOrganization`]

| Inherited from
| xref::class/Organisation.adoc[`Organisation`]


|===

//[discrete]
[#phone1]
=== `phone1`
+++Phone number.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.phone1`
| Cardinality
| 0..1
| Type
| xref::class/TelephoneNumber.adoc[`TelephoneNumber`]

| Inherited from
| xref::class/Organisation.adoc[`Organisation`]


|===

//[discrete]
[#phone2]
=== `phone2`
+++Additional phone number.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.phone2`
| Cardinality
| 0..1
| Type
| xref::class/TelephoneNumber.adoc[`TelephoneNumber`]

| Inherited from
| xref::class/Organisation.adoc[`Organisation`]


|===

//[discrete]
[#postalAddress]
=== `postalAddress`
+++Postal address, potentially different than 'streetAddress' (e.g., another city).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.postalAddress`
| Cardinality
| 0..1
| Type
| xref::class/StreetAddress.adoc[`StreetAddress`]

| Inherited from
| xref::class/Organisation.adoc[`Organisation`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#qualificationStatus]
=== `qualificationStatus`
+++Scheduling coordinator qualification status, Qualified, Not Qualified, or Disqualified.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SchedulingCoordinator.qualificationStatus`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#RegisteredResource]
=== `RegisteredResource`


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketParticipant.RegisteredResource`
| Cardinality
| 0..*
| Type
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| Inherited from
| xref::class/MarketParticipant.adoc[`MarketParticipant`]


|===

//[discrete]
[#Roles]
=== `Roles`
+++All roles of this organisation.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.Roles`
| Cardinality
| 0..*
| Type
| xref::class/OrganisationRole.adoc[`OrganisationRole`]

| Inherited from
| xref::class/Organisation.adoc[`Organisation`]


|===

//[discrete]
[#SchedulingCoordinator]
=== `SchedulingCoordinator`


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketParticipant.SchedulingCoordinator`
| Cardinality
| 0..*
| Type
| xref::class/SchedulingCoordinator.adoc[`SchedulingCoordinator`]

| Inherited from
| xref::class/MarketParticipant.adoc[`MarketParticipant`]


|===

//[discrete]
[#SchedulingCoordinatorUser]
=== `SchedulingCoordinatorUser`


[cols="h,4",width=65%]
|===
| URI
| `cim:SchedulingCoordinator.SchedulingCoordinatorUser`
| Cardinality
| 0..*
| Type
| xref::class/SchedulingCoordinatorUser.adoc[`SchedulingCoordinatorUser`]


|===

//[discrete]
[#scid]
=== `scid`
+++This is the short name or Scheduling Coordinator ID field.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SchedulingCoordinator.scid`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#streetAddress]
=== `streetAddress`
+++Street address.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.streetAddress`
| Cardinality
| 0..1
| Type
| xref::class/StreetAddress.adoc[`StreetAddress`]

| Inherited from
| xref::class/Organisation.adoc[`Organisation`]


|===

//[discrete]
[#SubmitFromSCTrade]
=== `SubmitFromSCTrade`


[cols="h,4",width=65%]
|===
| URI
| `cim:SchedulingCoordinator.SubmitFromSCTrade`
| Cardinality
| 0..*
| Type
| xref::class/Trade.adoc[`Trade`]


|===

//[discrete]
[#SubmitToSCTrade]
=== `SubmitToSCTrade`


[cols="h,4",width=65%]
|===
| URI
| `cim:SchedulingCoordinator.SubmitToSCTrade`
| Cardinality
| 0..*
| Type
| xref::class/Trade.adoc[`Trade`]


|===

//[discrete]
[#SwitchingPlanRequest]
=== `SwitchingPlanRequest`
+++The switching plan requested by the requesting organization+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.SwitchingPlanRequest`
| Cardinality
| 0..*
| Type
| xref::class/SwitchingPlanRequest.adoc[`SwitchingPlanRequest`]

| Inherited from
| xref::class/Organisation.adoc[`Organisation`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TimeSeries]
=== `TimeSeries`


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketParticipant.TimeSeries`
| Cardinality
| 0..*
| Type
| xref::class/TimeSeries.adoc[`TimeSeries`]

| Inherited from
| xref::class/MarketParticipant.adoc[`MarketParticipant`]


|===

//[discrete]
[#ToSCTrade]
=== `ToSCTrade`


[cols="h,4",width=65%]
|===
| URI
| `cim:SchedulingCoordinator.ToSCTrade`
| Cardinality
| 0..*
| Type
| xref::class/Trade.adoc[`Trade`]


|===

//[discrete]
[#TransmissionContractRight]
=== `TransmissionContractRight`


[cols="h,4",width=65%]
|===
| URI
| `cim:SchedulingCoordinator.TransmissionContractRight`
| Cardinality
| 0..*
| Type
| xref::class/ContractRight.adoc[`ContractRight`]


|===


